syntax = "proto3";// 使用3.5.1生成器生成代码

option java_package = "com.heaven.news.proto";
option java_outer_classname = "FlightSearchDomesticResultProtobuf";//生成的数据访问类的类名

message FlightSearchDomesticResultVO {
	string opResult = 1001;													// WS执行结果 0：正常结束;1:参数错误;2:SESSION超时;3:无结果;9:系统异常
	string hcType = 1002;													// 航程类型（DC、ZZ、WF、DD）
	string crmYJYD = 1003; 													// 常客会员价一键预定展示标识
	string caSearchId = 1004; 												// 国航查询ID
	repeated FlightInfoSegmentVO flightInfoSegmentList = 1005;				// 航程信息集合
	string resultMsg = 1006; 												// 错误信息
	message FlightInfoSegmentVO {
		string index = 2001;												// 航班顺序
		string orgCity = 2002;												// 航程出发城市（三字码）
		string dstCity = 2003;												// 航程到达城市（三字码）
		repeated FlightInfoSegmentSubVO flightInfoSegmentSubList = 2004;	// 航程信息集合
	}
	message FlightInfoSegmentSubVO {
		repeated FlightVO flightList = 3001;									// 航班信息
		repeated ClassProductVO classProductList = 3002;						// 舱位产品信息
		repeated ZZCityVO zzCityList = 3003;									// 经停城市
		string stopTime = 3004;													// 经停时间
		string stopTimeBack = 3005;												// 经停时间回程
		string flightNo = 3006;													// 航班号组合场合相加如（ZH9999+ZH0000）
		string duration = 3007;													// 总飞行时间(含经停时间)
		string durationBack = 3008;												// 总飞行时间回程(含经停时间)
	}
	message FlightVO {
		string caFlightFlag = 4001;												// 国航标志
		string flightNo = 4002;													// 航班号
		string orgCity = 4003;													// 出发城市（三字码）
		string dstCity = 4004;													// 到达城市（三字码）
		string orgDate = 4005;													// 出发日期
		string dstDate = 4006;													// 到达日期
		string orgTime = 4007;													// 起飞时间
		string dstTime = 4008;													// 到达时间
		string duration = 4009;													// 飞行时长
		string isCodeShare = 4010;												// 是否为共享航班(0-false;1-true)
		string codeShareText = 4011;											// 共享航班提示文字
		string market = 4012;													// 市场
		string carrier = 4013;													// 实际承运人
		string carrierFlightNo = 4014;											// 实际承运航班号
		string stopCity = 4015;													// 经停城市(三字码)
		string stopCityCH = 4016;												// 经停城市(中文)
		string meal = 4017;														// 是否有餐食 0：无1：有
		string spMeal = 4018;													// 特殊餐食 0:无特殊餐食； 1:提供特殊餐食但始发地不是深圳； 2:深圳始发的航班提供更多特殊餐食
		string acType = 4019;													// 机型
		string basePrice = 4020;												// 航段公布运价
		string isCheckSegment = 4021;											// 该行段是否需要验证码0不、1需要
		string ontimeRate = 4022;												// 准点率
		repeated TaxVO taxList = 4023;											// 税费信息
		string pulicClassPriceY = 4024;											// Y舱公布运价
		string pulicClassPriceF = 4025;											// F舱公布运价
		string pulicClassPriceC = 4026;											// C舱公布运价
		string classStorageY = 4027;											// Y舱库存
		string classStorageF = 4028;											// F舱库存
		string classStorageC = 4029;											// C舱公布运价
		string stopQuantity = 4030;												// 经停次数
		string isNewFare = 4031;													// 是否是新运价
	}
	message ClassProductVO {
		string prodoctType = 5001;												// 舱位产品类型
		string prodoctName = 5002;												// 舱位产品名称
		repeated ClassProductSubVO classSubList = 5003;							// 舱位信息
	}

	message ClassProductSubVO {
		string prodoctSubType = 6001;											// 舱位产品类型
		string prodoctSubName = 6002;											// 舱位产品名称
		repeated ClassInfoVO classInfoList = 6003;								// 舱位信息集合
	}
	message ClassInfoVO {
		string caIndex											= 7001; //国深航班查询索引
		string classCode										= 7002; //舱位代码
		string classType										= 7003;//舱位类型
		string clzzName											= 7004;// 舱位名称
		string productValue										= 7005;//产品代码(展示用)
		string originalProductValue								= 7006;//产品代码(展示用)
		string realProductValue									= 7007;//产品代码(组合产品)
		string spolCode											= 7008;//运价编码
		string ticketPrice										= 7009;//舱位价格(优惠前)
		string classPrice										= 7010;//舱位价格
		string publicClassPrice									= 7011;//公布运价
		string discount											= 7012;//舱位折扣
		string baseDiscount										= 7013;//舱位相对折扣
		string storge											= 7014;//库存座位数
		string changeRefund										= 7015;//退改签规定（使用说明）
		string mileAccPro										= 7016;//里程累积
		string lowestAcc										= 7017;//最低里程累积
		string saveMoney										= 7018;//立省
		string afterCouponPrice									= 7019;//优惠后价格
		string delayInsure										= 7020;//飞偿等待（0:否；1-是）

		string childTicketPrice									= 7021;//该舱位的儿童票价格
		string babyTicketPrice									= 7022;//该舱位的婴儿价格

		string giveCoupon										= 7023;//是否赠送优惠券（0：否1：是）
		repeated MileageDeductionVO mileageDeductionList		= 7024;//里程抵扣产品
		string mileageType										= 7025;//里程抵扣类型0：定额，1：非定额
		string mileagePoints									= 7026;//里程积分
		string segMileagePoints									= 7027;//里程免票单程所需里程（往返有值）
		string choseFlightShow									= 7028;//航班选择页面
		string ticketInfoShow									= 7029;//订单信息确认页面
		string passengerInfoShow								= 7030;//旅客信息填写页面
		string cutPrice											= 7031;//直减金额
		string airportShuttle									= 7032;//机场接送

		string minrefundMoney									= 7033;//飞行前2小时的退票金额
		string maxrefundMoney									= 7034;//飞行2小时(含)之后的退票金额
		string minrescheduleMoney								= 7035;//飞行前2小时的改期金额
		string maxrescheduleMoney								= 7036;//飞行2小时(含)之后的改期金额

		string beforeWeekRescheduleMoney						= 7037;//自愿变更：航班规定离站时间前 7 天( 含) 之前
		string beforeDaysRescheduleMoney						= 7038;//自愿变更：航班规定离站时间前 7 天至72 小时( 含) 之前
		string beforeHoursRescheduleMoney						= 7039;//自愿变更：航班规定离站时间前 72 小时至4 小时( 含) 之前
		string afterHoursRescheduleMoney						= 7040;//自愿变更：航班规定离站时间前 4 小时之后

		string beforeWeekRefundMoney							= 7041;//自愿退票：航班规定离站时间 7 天( 含) 之前
		string beforeDaysRefundMoney							= 7042;//自愿退票：航班规定离站时间 7 天至72 小时( 含) 之前
		string beforeHoursRefundMoney							= 7043;//自愿退票：航班规定离站时间 72 小时至4 小时( 含) 之前
		string afterHoursRefundMoney							= 7044;//自愿退票：航班规定离站时间 4 小时之后
		string isNewRefundReschedule							= 7045;//是否采用新退改签规则
		string beforeWeekReschedule								= 7046;//自愿变更：航班规定离站时间前 7 天( 含) 之前
		repeated TaxVO taxList									= 7047;//税费信息
		string mileageDescribe									= 7048;//里程抵扣描述
		string fxdrClassPrice									= 7049;//飞行达人价格
		string classPrice1										= 7050;// 中转场合第一段价格
		string classPrice2										= 7051;// 中转场合第二段价格
		string discount1										= 7052;// 中转场合第一段折扣
		string discount2										= 7053;// 中转场合第二段折扣
		string flightNo1										= 7054;
		string flightNo2										= 7055;
        string classCode1										= 7056;// 中转场合第一段舱位
        string classCode2										= 7057;// 中转场合第二段舱位
	}

	message MileageDeductionVO {
		string deductibleMile									= 8001;//抵扣里程数
		string deductibleAmount									= 8002;//抵扣金额
		string deductibleCode									= 8003;//产品编码DH
		string upperLimit										= 8004;//里程抵扣上线
	}

	message TaxVO {
		string psgrType											= 9001;//乘机人类型
		string amount											= 9002;//金额信息
		string currencyCode										= 9003;//币种类型
		string taxCode											= 9004;//税费代码
		string taxName											= 9005;//税费名称
		string taxType											= 9006;//税费类型
	}

	message ZZCityVO {
		string index											= 10001;//索引
		string city												= 10002;//城市
		string stopTime											= 10003;//经停时间
	}

}